@@ -162,6 +162,7 @@ CALLIN_LIST = {
 	"KeyPress",
 	"KeyRelease",
 	"TextInput",
+	"TextEditing",
 	"MousePress",
 	"MouseRelease",
 	"MouseMove",
@@ -187,4 +188,3 @@ end
 
 --------------------------------------------------------------------------------
 --------------------------------------------------------------------------------
-
