@@ -6,6 +6,8 @@
 #include <string>
 #include <vector>
 
+#include <SDL.h>
+
 #include "GameController.h"
 #include "GameJobDispatcher.h"
 #include "Game/UI/KeySet.h"
@@ -127,6 +129,7 @@ private:
 	int KeyPressed(int k, bool isRepeat) override;
 	///
 	int TextInput(const std::string& utf8Text) override;
+	int TextEditing(const std::string& utf8Text, unsigned int start, unsigned int length) override;
 
 	bool ActionPressed(unsigned int key, const Action& action, bool isRepeat);
 	bool ActionReleased(const Action& action);
@@ -230,6 +233,10 @@ private:
 
 	volatile bool finishedLoading;
 	bool gameOver;
+
+	int editingPos;
+	std::string textEditing;
+	SDL_Rect textEditingWindow;
 };
 
 
