@@ -95,6 +95,7 @@
 	SETUP_EVENT(KeyPress,       MANAGED_BIT | UNSYNCED_BIT | CONTROL_BIT)
 	SETUP_EVENT(KeyRelease,     MANAGED_BIT | UNSYNCED_BIT | CONTROL_BIT)
 	SETUP_EVENT(TextInput,      MANAGED_BIT | UNSYNCED_BIT | CONTROL_BIT)
+	SETUP_EVENT(TextEditing,    MANAGED_BIT | UNSYNCED_BIT | CONTROL_BIT)
 	SETUP_EVENT(MouseMove,      MANAGED_BIT | UNSYNCED_BIT | CONTROL_BIT)
 	SETUP_EVENT(MousePress,     MANAGED_BIT | UNSYNCED_BIT | CONTROL_BIT)
 	SETUP_EVENT(MouseRelease,   MANAGED_BIT | UNSYNCED_BIT)
@@ -212,4 +213,3 @@
 #ifndef SETUP_UNMANAGED_EVENT
 	#pragma pop_macro("SETUP_UNMANAGED_EVENT")
 #endif
-
